# Yolo11-Card-Detection-cpp

./: .gitignore  CMakeLists.txt  README.md  data.yaml
data/model/: labels.txt
include/: hermann_serain.hpp  marco_annunziata.hpp  shared.hpp  sveva_turola.hpp
scripts/: changeLabelsToMatchNewYaml.py  convertToONNX.ipynb  splitDataset.py  training.ipynb
src/: finalProject.cpp  hermann_serain.cpp  marco_annunziata.cpp  shared.cpp  sveva_turola.cpp
